--- a/sass/abstracts/variables/_structure.scss
+++ b/sass/abstracts/variables/_structure.scss
@@ -1,6 +1,7 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
 
+$xxlarge-screen: 1460px;
 $xlarge-screen: 1350px;
 $large-screen: 1200px;
 $medium-screen: 992px;
