--- a/style.css
+++ b/style.css
@@ -712,6 +712,12 @@ input[type="submit"] {
   margin: 0 auto;
 }
 
+@media (max-width: 1460px) {
+  .container {
+    max-width: 1340px;
+  }
+}
+
 @media (max-width: 1350px) {
   .container {
     max-width: 1190px;
@@ -847,6 +853,25 @@ input[type="submit"] {
   }
   .main-navigation ul {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 37.5em) {
+  .menu-toggle {
+    color: #fff;
+    background-color: transparent;
+    padding: 15px;
+    font-size: 1.5em;
+    border: 2px solid #eb6f31;
+    transition: all 0.3s;
+  }
+  .menu-toggle:hover {
+    background-color: #eb6f31;
+    border: 2px solid #eb6f31;
+    cursor: pointer;
+  }
+  .main-navigation ul li {
+    margin-bottom: 20px;
   }
 }
 
@@ -1392,6 +1417,12 @@ input[type="submit"] {
   justify-content: space-around;
 }
 
+@media (max-width: 992px) {
+  .contact-section .wp-block-columns {
+    flex-direction: column;
+  }
+}
+
 .contact-section .wp-block-columns .contact-info {
   padding-right: 180px;
 }
@@ -1412,7 +1443,14 @@ input[type="submit"] {
   margin: 0;
 }
 
+@media (max-width: 992px) {
+  .contact-section .wp-block-columns .wp-block-column {
+    margin-bottom: 20px;
+  }
+}
+
 .contact-section .wp-block-columns .wp-block-column ul {
+  padding: 0;
   margin-left: 0;
   list-style-type: none;
 }
